Dec 22, 2020
  DO QC: improved handling of xref synonyms

Aug 10, 2020
  fixed script run_stats_update_only.sh

Jul 24, 2020
  DO QC loader: better code to load definition xrefs

Jul 06, 2020
  gviewer stats: simplified code; only processing ontologies without cycles

Jul 03, 2020
  obo file creator: updated code to export term def xrefs

Jul 02, 2020
  parser: updated code to load term def xrefs

Jun 08, 2020
  obo generator: improved summary email

Apr 24, 2020
  term stats loader with filter: added calculation of term stats for cell lines

Apr 23, 2020
  term stats loader: added calculation of term stats for cell lines

Apr 15, 2020
  parser: for GO, fixed generation of Not4Curation synonyms

Apr 07, 2020
  obo-generator: vastly improved summary email

Mar 16, 2020
  gviewer stats loader: fix due to changes in rgdcore regarding primaray ref assemblies

Mar 06, 2020
  DO loader: added parsing of broad synonyms

Feb 28, 2020
  DO loader: added QC of OMIM IDs that are in DO ontology but not present in RDO

Dec 04, 2019
  added code to load CVCL ontology (cellosaurus ontology)
  removed code for unused cmdline option '-drop_synonyms'
  DO ontology: added loading of 'ICD9:' and 'ICD10:' xrefs

Nov 25, 2019
  code tune-up to load EFO ontology

Oct 18, 2019
  obo-generator: added export of subsets

Sep 30, 2019
  term stats loader: simplified code

Sep 20, 2019
  added script check_for_cycles.sh

Jul 1, 2019
  loader: fixed loading of term comments
    if a term comment contains new line, carriage return or tab character(s), they are replaced by a space character
    otherwise, we could get Oracle CHECK violation exception

Jun 19, 2019
  DO ontology: added loading of 'NCI:' and 'ICD-O' xrefs

Jun 10, 2019
  updated URL for MP ontology (to use MGI FTP url, instead of http://ontologies.berkeleybop.org)
  -- MGI said that they will be phasing out commits of MP ontology to berkeleybop.org

May 17, 2019  v.1.5.55